--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Let’s Chat, Just You & Me 💬</title>
+  <title> Call Me </title>
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Let’s Chat, Just You & Me 💬" />
+  <meta property="og:title" content="Call Me" />
   <meta property="og:description" content="Click here and let's catch up a bit 😏 I'm online now 💖" />
-  <meta property="og:image" content="https://i.imgur.com/d6hDnRT.jpg" />
+  <meta property="og:image" content="https://i.imgur.com/gGfOWPr.jpeg" />
   <meta property="og:url" content="https://lets-chat-just-us.vercel.app/" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -50,11 +50,11 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://i.imgur.com/d6hDnRT.jpg" alt="Chat Banner">
-    <h1>Let’s Chat, Just You & Me 💬</h1>
+    <img src="https://i.imgur.com/gGfOWPr.jpeg" alt="Chat Banner">
+    <h1>Call Me</h1>
     <p>Hey you 😏 I’m online and ready to talk.  
-    Hit the button below and let’s chat 💖</p>
-    <a class="button" href="https://foaltax.com/dhrgese5?key=8671e9b5e0c5562202afd84fe5e9124f" target="_blank">Start Chat Now</a>
+    Hit the button below </p>
+    <a class="button" href="https://foaltax.com/dhrgese5?key=8671e9b5e0c5562202afd84fe5e9124f" target="_blank">Call Now</a>
   </div>
 </body>
 </html>
